--- a/rrproject2.Rmd
+++ b/rrproject2.Rmd
@@ -10,8 +10,26 @@ output:
 Synopsis
 ========
 
+Question 1 - Impact on human health
+--------------------------------------
 
+* Tornados have the most impact on human health
 
+* Tornados cause the greatest loss of life
+
+* Tornados cause the most injuries
+
+Question 2 - Largest economic cost
+----------------------------------
+
+* Floods cause the most economic damage
+
+* Floods cause the most property damage
+
+* Droughts cause the most crop damage
+
+**NOTE.** Figures are shown in the results section. 
+All calculations are shown in the data processing section.
 
 
 
@@ -67,6 +85,7 @@ library(plyr)
 library(dplyr)
 library(reshape2)
 library(ggplot2)
+library(lubridate)
 ```
 
 
@@ -106,6 +125,36 @@ Converting the BGN_DATE to date format
 ```{r}
 stormdata$BGN_DATE <- as.Date(stormdata$BGN_DATE, "%m/%d/%Y")
 str(stormdata$BGN_DATE)
+```
+
+Data on damage cost is provided as a 3 signifcant figure value and a expander letter 
+
+* K = 1 000
+
+* M = 1 000 000
+
+* B = 1 000 000 000
+
+Converting these values to numeric
+
+```{r}
+value_from_expander <- function(data, damage_type){
+        damage_type_exp <- paste(damage_type, "EXP", sep="")
+        damage_value <- as.numeric(data[damage_type])
+        damage_exp <- data[damage_type_exp]
+        if(damage_exp == "K"){
+                damage_value <- damage_value * 1000
+        } else if(damage_exp == "M"){
+                damage_value <- damage_value * 1000000
+        } else if(damage_exp == "B"){
+                damage_value <- damage_value * 1000000000
+        }
+        damage_value
+}
+stormdata$Property_damage_USD <- apply(stormdata, 1, value_from_expander, damage_type = "PROPDMG")
+stormdata$Crop_damage_USD <- apply(stormdata, 1, value_from_expander, damage_type = "CROPDMG")
+stormdata$Total_damage <- stormdata$Property_damage_USD + stormdata$Crop_damage_USD
+head(stormdata)
 ```
 
 
@@ -274,11 +323,140 @@ p
 
 From this plot we can see that how we ratio is not important in derterming the event type with the largest impact to human health.
 
-### Output plot
+Question 2
+----------
 
-Since putting a higher value on fatalities compared to injuries did affect the outcome of the event type with the largest impact. Nor did calculation of reducition indamage to human health in modern times. The output plot will simply contain some of the highest damage event types with the quanities of injuries and deaths.
+###Which type of events have the greatest econmic consquence?
 
-I will use the previously generated totals dataset.
+###Considerations
+
+There a few things we might want to considerer when answering this question
+
+* should there be an economic value set for the impacts to human health?
+
+* do we need to account for inflation?
+
+* the data set operates in good faith with cost estimates, with regulation there could be some discreptances
+
+* are there null fields in the data and how should they be handled
+
+```{r}
+sapply(stormdata, function(x){length(which(is.na(x)))})
+```
+
+
+*without any NA values it is impossible to tell if zero estimates are accurate or just no information supplied. THis could require further analysis.
+
+* other related costs such as debris clearing, fire fighting and personnel overtime charges are not included in these estimates
+
+
+### Assumptions 
+
+* The study doesn't specify if deaths and injury are caused directly or indirectly. For this reason they will be treated of the same value. 
+
+* The event type will grouped by event name
+
+* Since an acurate prediction model for times in between freak event of certain event types isn't available the assumption wil be made the same type and magnitude is as likely to reoccur as any other event type. 
+
+* human health will not be considered in this study as it is hard put a price value too and insurficent data is contained in this study
+
+*it would be possible to go through the event naratives to obtain additional costing in regards to more significant figure estimes. Since there isn't a direct sentence structure stimpulated for data entry extraction would be too difficulat and time consuming for this study. Much of this data is likely missing anyway.
+
+*Inflation will not be accounted for in this analysis as fixed values are supplied for damages in the study and as such the damage estimates should not have increased over time for the same items.
+
+### The value of the US currency over time
+
+Chosen to disregaurd inflation as noted above. Data is still included but not currently used. 
+
+Inflation data will be added below and add a copy of the data will be available on the GitHub repository.
+
+This data was downloaded from the Federal Reserve Bank of St. Louis from [this page](https://fred.stlouisfed.org/series/FPCPITOTLZGUSA). 
+
+The data available is from the year 1960 till 2016. Other years will be excluded due to lack of information
+
+### Adding the inflation data
+
+
+```{r}
+fileurl <- "https://fred.stlouisfed.org/graph/fredgraph.csv?chart_type=line&recession_bars=on&log_scales=&bgcolor=%23e1e9f0&graph_bgcolor=%23ffffff&fo=Open+Sans&ts=12&tts=12&txtcolor=%23444444&show_legend=yes&show_axis_titles=yes&drp=0&cosd=1960-01-01&coed=2016-01-01&height=450&stacking=&range=Custom&mode=fred&id=FPCPITOTLZGUSA&transformation=lin&nd=1960-01-01&ost=-99999&oet=99999&lsv=&lev=&mma=0&fml=a&fgst=lin&fgsnd=2009-06-01&fq=Annual&fam=avg&vintage_date=&revision_date=&line_color=%234572a7&line_style=solid&lw=2&scale=left&mark_type=none&mw=2&width=749#"
+filepath <- "./ProjectData/inflation.csv"
+projectdatapath <- "./ProjectData"
+if(!file.exists(filepath)){
+        if(!dir.exists(projectdatapath)){
+               dir.create(projectdatapath) 
+        }
+        download.file(fileurl, filepath)
+}
+rm(fileurl)
+```
+
+Add data to r
+
+```{r cache = TRUE}
+inflation_data <- read.csv(filepath)
+head(inflation_data)
+```
+
+### Cleaning the inflation data
+
+```{r}
+inflation_data$DATE <- as.Date(inflation_data$DATE)
+inflation_data$Year <- lubridate::year(inflation_data$DATE)
+colnames(inflation_data) <- c("Date", "Inflation_rate","Year")
+head(inflation_data)
+```
+
+Extracting the year from the date data in the storm data set
+
+```{r}
+stormdata$Year <- lubridate::year(stormdata$BGN_DATE)
+head(stormdata[,c("BGN_DATE", "Year")])
+```
+
+Calculating the accumlative inflation
+
+```{r}
+cumlative_inflation = 0
+for(i in 1:nrow(inflation_data)){
+        
+}
+```
+
+###Creating a damage data sumary grouped by event type
+
+```{r}
+#Due to an issue with grouping not working I needed to reattach the plyr and dplyr packages
+detach(package:plyr)
+detach(package:dplyr)
+library(plyr)
+library(dplyr)
+Damages_by_event_type <- group_by(stormdata, EVTYPE)
+Damages_by_event_type <- summarize(Damages_by_event_type, Property_damage_USD = sum(Property_damage_USD), Crop_damage_USD = sum(Crop_damage_USD), Total_damage = sum(Total_damage))
+Damages_by_event_type <- arrange(Damages_by_event_type, desc(Total_damage))
+head(Damages_by_event_type)
+```
+
+Reducing this data for plotting results, only the 20 event types with the largest cost will be shown.
+
+```{r}
+Reduced_damages_by_event_type <- Damages_by_event_type[1:20,] %>% select(-Total_damage) %>% rename(Event_type = EVTYPE)
+Reduced_damages_by_event_type$Event_type <- with(Reduced_damages_by_event_type, factor(Event_type, Event_type))
+Reduced_damages_by_event_type <- melt(Reduced_damages_by_event_type, id = "Event_type")
+colnames(Reduced_damages_by_event_type) <- c("Event_type", "Damage_type", "Cost_USD")
+Reduced_damages_by_event_type$Damage_type <- factor(Reduced_damages_by_event_type$Damage_type, labels = c("Property", "Crops"))
+head(Reduced_damages_by_event_type)
+```
+
+
+
+Results
+=======
+
+Question 1 - Which event type had the largest impact to human health?
+-----------------------------------------------------------------------
+
+Since putting a higher value on fatalities compared to injuries didn't affect the outcome of the event type with the largest impact. Nor did calculation of a reducition in impact to human health in modern times. The output plot will simply contain some of the highest damage event types with the quanities of injuries and deaths.
+
 
 ```{r}
 totals <- totalinjsperevent %>% arrange(desc(TOTAL_FAI)) %>% select(-TOTAL_FAI)
@@ -298,14 +476,45 @@ p <- p + theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
 p
 ```
 
-Results
-=======
+
+It is clear that Tornados are the event type that has the greatest impact to human health. In both injurys and fatalities it is clearly the highest. 
+
+Question 2 - Across the United States, which types of events have the greatest economic consequences?
+---------------------------------------------------------------------------------------------------------
 
 
 
+```{r}
+p <- ggplot(Reduced_damages_by_event_type, aes(x=Event_type, y=Cost_USD, fill = Damage_type))
+p <- p + geom_bar(stat = "identity")
+p <- p + scale_fill_manual(values=c("rosybrown", "red3"))
+p <- p + guides(fill = guide_legend(reverse = FALSE, title = "Type of Damage"))
+p <- p + labs( x = "Event Type")
+p <- p + labs(y = "Cost in Billions of USD")
+p <- p + scale_y_continuous(labels = c("0","50","100","150"))
+p <- p + ggtitle("Economic damage of different event types")
+p <- p + theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5))
+p
+```
 
+It is clear that floods are the event type that cause the most economical damage.
 
+It is also clear that droughts cause the largest amount of crop damage.
 
+### Reviewing the Economic Value of a life
+
+Looking at the economic value a life would need to have for Tornado to become the highest damage.
+
+```{r}
+Flood_damage_cost <- Damages_by_event_type %>% filter(EVTYPE == "FLOOD") %>% select(Total_damage)
+Tornado_damage_cost <- Damages_by_event_type %>% filter(EVTYPE == "TORNADO") %>% select(Total_damage)
+Flood_fatalities <- totalinjsperevent %>% filter(EVTYPE == "FLOOD") %>% select(TOTAL_FATAL)
+Tornado_fatalities <- totalinjsperevent %>% filter(EVTYPE == "TORNADO") %>% select(TOTAL_FATAL)
+cost_per_life <- (Tornado_damage_cost - Flood_damage_cost)/(Flood_fatalities - Tornado_fatalities)
+cost_per_life
+```
+
+I human life would need to have an economic value of over 18 Million before tornados caused the highest economical damage.
 
 
 
